--- a/page-extra/page-hasil.html
+++ b/page-extra/page-hasil.html
@@ -45,7 +45,7 @@
       .nav-content {
         position: absolute;
         top: 12vw; /* Adjust based on nav-button height */
-        left: 0;
+        left: 15px;
         right: 0;
         width: 80% !important;
         display: flex;
