--- a/page-extra/page-panduan.html
+++ b/page-extra/page-panduan.html
@@ -37,14 +37,14 @@
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
         position: absolute;
         top: -50px;
-        left: 0;
+        left: 10px;
         z-index: 1000;
       }
       
       .nav-content {
         position: absolute;
-        top: -2vw; /* Adjust based on nav-button height */
-        left: 0;
+        top: -4vw; /* Adjust based on nav-button height */
+        left: 15px;
         right: 0;
         width: 80% !important;
         display: flex;
