navbar landing beda sendiri

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li class="nav-item active">Beranda</li>
                 <li class="nav-item"><a href="page-extra/page-bandingkan.html">Bandingkan</a></li>
                 <li class="nav-item"><a href="page-extra/page-panduan.html">Panduan</a></li>
+                <i class="fa-solid fa-magnifying-glasswed"></i>
             </ul>
         </nav>
         
