--- a/page-extra/page-hasil.html
+++ b/page-extra/page-hasil.html
@@ -37,14 +37,14 @@
         font-size: 2vw; /* Adjust font size based on viewport */
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
         position: absolute;
-        top: 20px;
+        top: -60px;
         left: 10px;
         z-index: 1000;
       }
       
       .nav-content {
         position: absolute;
-        top: 12vw; /* Adjust based on nav-button height */
+        top: -6vw; /* Adjust based on nav-button height */
         left: 15px;
         right: 0;
         width: 80% !important;
@@ -75,6 +75,10 @@
       
       .nav-content.open {
         transform: scaleY(1);
+      }
+
+      #content {
+        margin-top: 20%;
       }
 }
   </style>
