update banding dengan nama vr

--- a/index.html
+++ b/index.html
@@ -496,8 +496,11 @@
            <script src="assets/js/script.js"></script>
            <script src="assets/js/img-slide.js"></script>
            <script src="assets/js/script-toSpec.js"></script>
+           <script src="assets/js/bandingkan-search.js"></script>
+           <script src="assets/data/data.js"></script>
            <script>
             localStorage.removeItem('key')
           </script>
+
 </body>
 </html>
