--- a/page-extra/page-bandingkan.html
+++ b/page-extra/page-bandingkan.html
@@ -80,7 +80,6 @@
   <body>
     <section-bandingkan>
       <!-- Navbar - Bandingkan start -->
-      <center>
         <nav class="navbar nav text-dark p-2 pt-5">
           <div class="nav-button" id="navButton">☰</div>
           <ul
@@ -94,7 +93,6 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </ul>
         </nav>
-      </center>
       <!-- Navbar - Bandingkan end -->
 
       <!-- Content - Bandingkan start -->
@@ -296,8 +294,10 @@
     ></script>
     <script src="../assets/js/script-bandingkan.js"></script>
     <script src="../assets/js/img-slide.js"></script>
+    <script src="../assets/js/send-data-bandingkan.js"></script>
     <script>
       localStorage.removeItem('key')
     </script>
+
   </body>
 </html>
