--- a/page-extra/page-panduan.html
+++ b/page-extra/page-panduan.html
@@ -426,6 +426,9 @@
     <script src="../assets/js/img-slide.js"></script>
     <script>
       localStorage.removeItem('key')
+
+      localStorage.removeItem('key1')
+      localStorage.removeItem('key2')
     </script>
   </body>
 </html>
