--- a/page-extra/page-spec.html
+++ b/page-extra/page-spec.html
@@ -180,5 +180,11 @@
     ></script>
     <script src="../assets/js/script-spec.js"></script>
     <script src="../assets/js/img-slide.js"></script>
+    <script>
+      localStorage.removeItem('key')
+
+      localStorage.removeItem('key1')
+      localStorage.removeItem('key2')
+    </script>
   </body>
 </html>
