--- a/index.html
+++ b/index.html
@@ -504,8 +504,8 @@
            <script>
             localStorage.removeItem('key')
 
-            localStorage.removeItem('key1')
-            localStorage.removeItem('key2')
+            localStorage.removeItem('produk1')
+            localStorage.removeItem('produk2')
           </script>
 
 </body>
