--- a/page-extra/page-bandingkan.html
+++ b/page-extra/page-bandingkan.html
@@ -210,7 +210,7 @@
           <img src="../assets/icon/angle-up.png" width="20px" alt="" />
           <a
             id="productLink"
-            href="page-hasil.html"
+            href="page-search-banding.html"
             class="m-0 text-white text-decoration-none"
           >
             Bandingkan produk
