fitur done, animasi done

--- a/page-extra/page-bandingkan.html
+++ b/page-extra/page-bandingkan.html
@@ -161,10 +161,10 @@
               >
                 <p class="m-0">Tatapan mata</p>
                 <button
-                  class="btn-mode d-flex btn justify-content-start p-0 rounded-pill align-items-center position-relative"
+                  class="btn-mode d-flex btn border-secondary justify-content-start p-0 rounded-pill align-items-center position-relative"
                   style="width: 40px; height: 20px"
-                  data-sensor="Pelacakan mata"
-                  onclick="sliderBtn('circle-btn-mata', 'Pelacakan mata')"
+                  data-sensor="Tatapan mata"
+                  onclick="sliderBtn('circle-btn-mata', 'Tatapan mata')"
                 >
                   <div
                     class="bg-white position-absolute rounded-pill"
@@ -178,10 +178,10 @@
               >
                 <p class="m-0">Gestur Tangan</p>
                 <button
-                  class="btn-mode d-flex btn justify-content-start p-0 rounded-pill align-items-center position-relative"
+                  class="btn-mode d-flex btn border-secondary justify-content-start p-0 rounded-pill align-items-center position-relative"
                   style="width: 40px; height: 20px"
-                  data-sensor="Pelacakan tangan"
-                  onclick="sliderBtn('circle-btn-tangan', 'Pelacakan tangan')"
+                  data-sensor="Gestur Tangan"
+                  onclick="sliderBtn('circle-btn-tangan', 'Gestur Tangan')"
                 >
                   <div
                     class="bg-white position-absolute rounded-pill"
@@ -195,7 +195,7 @@
               >
                 <p class="m-0">Giroskop</p>
                 <button
-                  class="btn-mode d-flex btn justify-content-start p-0 rounded-pill align-items-center position-relative"
+                  class="btn-mode d-flex btn border-secondary justify-content-start p-0 rounded-pill align-items-center position-relative"
                   style="width: 40px; height: 20px"
                   data-sensor="Giroskop"
                   onclick="sliderBtn('circle-btn-giro', 'Giroskop')"
